<resources>
    <string name="app_name">Schedule</string>
    <string name="app_designer">Designed by Team B515 on GitHub</string>

    <string name="action_add">Add Course</string>
    <string name="action_capture">Capture</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete_forever">Delete Forever</string>
    <string name="action_import">Import</string>
    <string name="action_import_file">Import from file</string>
    <string name="action_settings">Settings</string>
    <string name="action_manage">Manage courses</string>
    <string name="action_clear">Clear all</string>

    <string name="alert_title">Warning</string>
    <string name="alert_neg">Cancel</string>
    <string name="alert_pos">Okay</string>

    <string name="course_edit">Edit Course</string>
    <string name="course_new">New Course</string>
    <string name="course_manage">Manage courses</string>

    <string name="settings_about_content" translatable="false">15071005 王涵\n15071018 刘云\n15071017 赵以梁</string>
    <string name="settings_about_title">About us</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_dlc">DLC</string>
    <string name="settings_category_language">Language</string>
    <string name="settings_category_user">User Settings</string>
    <string name="settings_empty">Empty</string>
    <string name="settings_language_title">Change language</string>
    <string name="settings_language_summary">Select your language here</string>
    <string name="settings_password_hint">Enter password here</string>
    <string name="settings_password_mask" translatable="false">********</string>
    <string name="settings_password_title">Password</string>
    <string name="settings_splash_screen_hint">Enable splash screen</string>
    <string name="settings_splash_screen_title">Splash screen (Bonus Feature)</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme_title">Themes</string>
    <string name="settings_theme_hint">Setup theme</string>
    <string name="settings_user_hint">Enter user name here</string>
    <string name="settings_user_title">User Number</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_source_title">Source code</string>

    <string name="theme_tick" translatable="false">✓</string>
    <string name="theme_title">Theme</string>
    <string name="theme_using">Using</string>
    <string name="theme_use">Use</string>
    <string name="theme_violet_zero">ZeroGo Violet</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_red">Red</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_pink">Pink</string>
    <string name="theme_green">Green</string>
    <string name="theme_teal">Teal</string>
    <string name="theme_indigo">Indigo</string>
    <string name="theme_black">Black</string>
    <string name="theme_green_yun">Yun Green</string>
    <string name="main_today_courses">Today</string>
    <string name="main_week_courses">Week</string>
    <string name="course_name">Course Name</string>
    <string name="course_type">Course Type</string>
    <string name="course_teacher">Teacher</string>
    <string name="week_num">Week %d</string>
    <string name="spacetime_start">Start Week</string>
    <string name="spacetime_end">End Week</string>
    <string name="spacetime_place">Place</string>
    <string name="spacetime_delete">Delete</string>
    <string name="action_add_spacetime">Add new time and place</string>
    <string name="alert_message">Delete forever?</string>
    <string name="alert_discard">Discard changes?</string>
    <string name="spacetime_start_time">Start Time</string>
    <string name="spacetime_end_time">End Time</string>
    <string name="source_code_url" translatable="false">https://github.com/B515/Schedule</string>
    <string name="course_color">Color</string>
</resources>
