<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_24dp"
        android:orderInCategory="80"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_import_file"
        android:icon="@drawable/ic_import_file_24dp"
        android:orderInCategory="80"
        android:title="@string/action_import_file"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import_24dp"
        android:orderInCategory="80"
        android:title="@string/action_import"
        app:showAsAction="ifRoom"/>
</menu>