<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_forever"
        android:icon="@drawable/ic_delete_forever_24dp"
        android:orderInCategory="2"
        android:title="@string/action_delete_forever"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_confirm"
        android:icon="@drawable/ic_check_24dp"
        android:orderInCategory="3"
        android:title="@string/action_confirm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_spacetime"
        android:icon="@drawable/ic_add_24dp"
        android:orderInCategory="1"
        android:title="@string/action_add_spacetime"
        app:showAsAction="ifRoom" />
</menu>