<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/spacetime_delete"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_delete_forever_24dp"
                android:backgroundTint="@color/colorAccent"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/spacetime_length"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:padding="4dp">

                <EditText
                    android:id="@+id/spacetime_start_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/spacetime_start"
                    android:inputType="number|numberDecimal"
                    android:singleLine="true"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/spacetime_length"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:padding="4dp">

                <EditText
                    android:id="@+id/spacetime_end_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/spacetime_end"
                    android:inputType="number|numberDecimal"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/spacetime_length"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:padding="4dp">

                <EditText
                    android:id="@+id/spacetime_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/spacetime_start_time"
                    android:inputType="number|numberDecimal"
                    android:singleLine="true"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/spacetime_length"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="4"
                android:padding="4dp">

                <EditText
                    android:id="@+id/spacetime_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/spacetime_end_time"
                    android:inputType="number|numberDecimal"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="4dp">

            <EditText
                android:id="@+id/spacetime_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/spacetime_place"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
